--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <hr class="star-light">
                 </div>
             </div>
-            <div class="row">
+            <div class="row" style="padding-left:80px">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
