--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Hi! I am Ritesh Porey, a graduate student pursuing Master of Science in Computer Science at North Carolina State University. I am actively searching for full-time opportunities, starting May 2017, in Computer Networks, Computer and Network Security and Web Development. 
+                    <p>Hi! I am Ritesh Porey, a graduate student pursuing Master of Science in Computer Science at North Carolina State University. I am actively searching for full-time opportunities, starting June 2017, for a Software Development Position. 
 </p>
                 </div>
                 <div class="col-lg-4">
@@ -291,7 +291,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Ritesh Porey 2016
+                        Copyright &copy; Ritesh Porey 2017
                     </div>
                 </div>
             </div>
